fix: main layout on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -18,15 +18,16 @@
 
 @media screen and (max-width: 1280px) {
     .App--layout {
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .App--main {
-        flex: 0 0 75%;
+        flex: 0 0 100%;
     }
 
     .App--side {
-        flex: 0 0 25%;
+        flex: 0 0 100%;
         margin-left: 0;
         margin-top: 3rem;
     }
